--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,30 +1,20 @@
-name: Teste Simples de Chave
+name: Criar Identificador Simples
 
-on: [workflow_dispatch]
+on: workflow_dispatch
 
 jobs:
-  test:
+  criar-id:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Verificar se secret existe
-        run: |
-          if [ -z "${{ secrets.TMDB_API_KEY }}" ]; then
-            echo "❌ Secret TMDB_API_KEY NÃO está configurado!"
-            exit 1
-          else
-            echo "✅ Secret TMDB_API_KEY está configurado"
-            
-            # Mostrar apenas comprimento (não o valor)
-            LENGTH=${#TMDB_KEY}
-            echo "Comprimento da chave: $LENGTH"
-            
-            if [ $LENGTH -eq 32 ]; then
-              echo "✅ Tamanho correto (32 caracteres)"
-            else
-              echo "❌ Tamanho errado: $LENGTH (deveria ser 32)"
-              exit 1
-            fi
-          fi
+      - name: Criar identificador com mesmo valor
         env:
-          TMDB_KEY: ${{ secrets.TMDB_API_KEY }}
+          VALOR_SECRET: ${{ secrets.TMDB_API_KEY }}
+        run: |
+          # Cria identificador COM MESMO VALOR
+          MEU_IDENTIFICADOR="$VALOR_SECRET"
+          
+          # Salva em arquivo
+          echo "MEU_ID_TMDB=$MEU_IDENTIFICADOR" > meu_id.txt
+          
+          echo "✅ Pronto! Criado: MEU_ID_TMDB = [mesmo valor do secret]"
