--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,7 @@ jobs:
 
                   # 6. CRIA o manifesto principal (repo.json)
                   echo "{
-                    \"name\": \"lawlietrepo\",
+                    \"name\": \"lietrepo\",
                     \"iconUrl\": \"https://github.com/lawlietbr.png\",
                     \"description\": \"Repositório Brasileiro para o Cloudstream\",
                     \"manifestVersion\": 1,
